--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -33,7 +33,7 @@
                 <td>{{record.state}}</td> 
                   <td>{{record.zipcode}}</td>
                     <td>{{record.created_at}}</td>
-                      <td>{{record.id}}</td>
+                    <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
     </tr>
   {%endfor%}
   {%endif%}
@@ -45,7 +45,7 @@
 
 
 {% else %}
-
+<div class="col-md-6 offset-md-3">
 <h1> Login </h1>
 <br/>
 <form method="POST" action={%url 'home'%}>
