--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,7 @@
 {%if user.is_authenticated %}
 
 <table class="table table-striped table-hover table-bordered ">
-  <thead class ="table-dark">
+  <thead class ="table-info">
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Email</th>
@@ -22,7 +22,8 @@
   <tbody>
   {%if records%}
   {%for record in records%}
-    <tr>
+  
+    <tr class ="{% cycle 'table-primary' 'table-secondary' 'table-success' % }" >
       
         <td>{{record.first_name}}
         {{record.last_name}}</td>
