--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -24,6 +24,6 @@
   </div>
 <br/><br/>
 <a href= "{% url 'home' %}" class ="btn btn-primary">Back</a>
-<a href= "{% url 'home' %}" class ="btn btn-danger">Delete</a>
+<a href= "{% url 'delete_record' customer_record.id %}" class ="btn btn-danger">Delete</a>
 
 {% endblock %}
