--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -23,7 +23,9 @@
     </div>
   </div>
 <br/><br/>
-<a href= "{% url 'home' %}" class ="btn btn-primary">Back</a>
+<a href= "{% url 'home' %}" class ="btn btn-secondary">Back</a>
+<a href= "{% url 'update_record' customer_record.id %}" class ="btn btn-primary">Update Record</a>
 <a href= "{% url 'delete_record' customer_record.id %}" class ="btn btn-danger">Delete</a>
+
 
 {% endblock %}
