--- a/website/templates/update_record.html
+++ b/website/templates/update_record.html
@@ -4,11 +4,11 @@
 <div class="col-md-6 offset-md-3">
 <h1> Add Record</h1>
 <br/>
-<form method="POST" action={%url 'add_record'%}>
+<form method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <br/>
-    <button type="Add Record" class="btn btn-primary">Add Record</button>
+    <button type="Add Record" class="btn btn-primary">Update Record</button>
 </form>
 </div>
 {% endblock %}
